fix about overflow mobile

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -97,6 +97,11 @@
 
 /* ================ MEDIA QUERIES (SMALL DEVICES) ================= */
 @media screen and (max-width: 768px) {
+   .about__container {
+    width: 100%;
+    overflow: hidden;
+  }
+
   .about__me {
     width: 65%;
     margin: 0 auto 3rem;
@@ -110,12 +115,15 @@
 
   .about__content {
     text-align: center;
+    width: 100%;
+    overflow: hidden;
+    padding: 0 1rem;
   }
 
   .about__content p {
     /* margin: 1.5rem 0; */
     text-align: center;
-    padding: 0 1rem;
+    max-width: 100%;
     word-break: break-word;
     overflow-wrap: break-word;
   }
